--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-  	html,body{
-				height: 100vh;
-				width: 100vw	;
-				overflow: hidden;
+  			html,body{
+				overflow-x: hidden;
+    				overflow-y: scroll;
 			}
 
 			#header{
@@ -12,7 +11,6 @@
 				flex-direction: row;
 				justify-content: flex-start;
 				align-items: center;
-				top: 0;
 				left: 0;
 			}
 
